--- a/roles/configure_logrotate_mongodb/tasks/main.yml
+++ b/roles/configure_logrotate_mongodb/tasks/main.yml
@@ -1,24 +1,17 @@
-- name: Gather installed packages
-  ansible.builtin.package_facts:
-    manager: auto
-
 - name: Ensure logrotate is installed
-  ansible.builtin.package:
+  package:
     name: logrotate
     state: present
-  when: logrotate_mongodb_enabled
   become: true
 
 - name: Ensure /etc/logrotate.d directory exists
-  ansible.builtin.file:
+  file:
     path: /etc/logrotate.d
     state: directory
     mode: "0755"
-  when: logrotate_mongodb_enabled
 
 - name: Deploy logrotate config for MongoDB
   ansible.builtin.template:
     src: mongodb.j2
     dest: /etc/logrotate.d/mongodb
     mode: "0644"
-  when: logrotate_mongodb_enabled
